add : keyboard_mouse_controller.py
キーボードの入力に対してのマウスカーソルの移動を処理する部分を実装

--- a/key2cursor/key_config.json
+++ b/key2cursor/key_config.json
@@ -12,7 +12,8 @@
     "scrollUp": "t",
     "scrollDown": "g"
   },
-  "option": {
-    "cursorSpeed": 50
+  "options": {
+    "cursorSpeed": 50,
+    "scrollSpeed": 50
   }
 }
